k8s-manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devboard-frontend-deployment
  namespace: devboard
  labels:
    app: devboard-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devboard-frontend
  template:
    metadata:
      labels:
        app: devboard-frontend
    spec:
      containers:
      - image: shashank192002/devboard-frontend
        name: devboard-frontend
        ports:
        - containerPort: 4173

      resources:
        limits:   #max usable
          memory: "128Mi"
          cpu: "250m"
        requests:     #min needed
          memory: "64Mi"
          cpu: "10m"
