k8s-manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: devboard-frontend
  namespace: devboard
spec:
  containers:
  - image: shashank192002/devboard-frontend
    name: devboard-frontend
    ports:
    - containerPort: 4173
