k8s-manifests/postgres-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: devboard
  labels:
    app: devboard-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-postgres
  template:
    metadata:
      labels:
        app: devboard-postgres
    spec:
      containers:
      - image: postgres:16-alpine
        name: postgres
        ports:
        - containerPort: 5432

      volumes:
        - name: init
          configMap:
            name: postgres-init
