k8s-manifests/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: devboard
  labels:
    app: devboard-postgres
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
  serviceName: postgres-service
  replicas: 3
  selector:
    matchLabels:
      app: devboard-postgres
  template:
    metadata:
      labels:
        app: devboard-postgres
    spec:
      containers:
      - image: postgres:16-alpine
        name: postgres
        ports:
        - containerPort: 5432

        volumeMounts:
          - name: init
            mountPath: /docker-entrypoint-initdb.d
            readOnly: true

          - name: data
            mountPath: /var/lib/postgresql/data

        readinessProbe:
          exec:
            command: ["sh","-c","pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)"]
          initialDelaySeconds: 15
          periodSeconds: 5
            
        

      volumes:
        - name: init
          configMap:
            name: postgres-init
