k8s-manifests/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: devboard
spec:
  clusterIP: None
  selector: 
    app: devboard-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
