k8s-manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: devboard-frontend-service
  namespace: devboard
spec:
  selector: 
    app: devboard-frontend
  ports:
  - protocol: TCP
    port: 30080
    targetPort: 4173
  type: NodePort
